syntax = "proto3";
option go_package = "proto.account";

service AccountService {
  rpc List(ListAccountRequest) returns (ListAccountResponse);
  rpc Create(CreateAccountRequest) returns (AccountProfileResponse);
  rpc Get(SingleAccountRequest) returns (AccountProfileResponse);
  rpc Update(UpdateAccountRequest) returns (SuccessResponse);
  rpc Delete(SingleAccountRequest) returns (SuccessResponse);
}

message ListAccountRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message ListAccountResponse {
  repeated AccountProfileResponse accounts = 1;
}

message CreateAccountRequest {
  string code = 1;
  string name = 2;
  string description = 3;
  string flex_fin_id = 4;
}

message SingleAccountRequest {
  oneof account_identifier {
    string id = 1;
    string code = 2;
  }
}

message AccountProfileResponse {
  string id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  string flex_fin_id = 5;
  string deleted_at = 6;
}

message SuccessResponse {
  string response = 1;
}

message UpdateAccountRequest {
  string id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  string flex_fin_id = 5;
}
